Release Notes for the event package
-----------------------------------

event-R4-2-3: 2016-05-17 C. Bianchini
      * Bug Fix for EDEF after 10 to receive the bit from the EVG to notify when the acquisition is done.
      * Changed the RMS calculation as required after meeting with physicists and the photon side

event-R4-2-2: 2016-05-17 C. Bianchini
      * Add Pulse ID compress record in BSA. (This includes changes in bsaEdefAvg.d)
      * Add NAN values when the data are not available for a specific pulse ID
      * Add a check for a signal from the EVG to say "The aquisition is done". This feature will start working only when the 	    EVG module new release will be pushed.
      * move the square calculation for rms in a lower priority function
      * evrFixed 64vs32 bit errors in aSubEvOffset that broke invariant timing lookup on 64 bit hosts 
        (for evrEvInvariantDelay.c, this changes has been made by Bruce Hill)

event-R4-2-1: 2016-04-04 K. Kim
      * To avoid undefine symbol for "int_showme, dbuf_showme and event_showme" in RTEMS
        define dummy variable for RTMES. These variables has been introduce for special debugging for linux/linuxRT 

event-R4-2-0: 2015-08-18 K. Kim
      * Include Tomo's EMCOR EVR support
      * add up debugging feature for interrupt, mapping ram, event FIFO and data buffer handling

event-R4-1-6: 2015-02-18 K. Kim
      * consider for 360Hz resolution timestamp
        allow to set  TS1ST=0, TS2ND=0 for 360Hz resolution timestamp

event-R4-1-5: 2015-01-12  K. Kim

      * fix unstable fiducial rate calculation due to the race condition between the rate calculation and the 360Hz processing
      * use latched clock counter for ErGetTicks()

      * Change to support epics R3.15
      * Fix autosave info field typo: 29-Dec-2014 (E. Williams) 
        * can't use commas as a delimiter for autosave info fields; must use spaces

      * Bug fix in BSA processing: 28-Jan-2015 K. Kim - retagging